# CLUSEK-RT

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
documentation/: building.md  coding_standards.md  dependencies.md  requirements.md  resources_standards.md  scripts.md
documentation/formatting/: cpp_formatting.clang-format  cpp_formatting.xml
engine/: Engine.cpp  Engine.h  main.cpp
engine/common/: CommandLineArgumentsParser.cpp  CommandLineArgumentsParser.h  CommonMacros.h  ConfigData.h  StringUtil.cpp  StringUtil.h  Timer.cpp  Timer.h
engine/common/debug/: Logger.cpp  Logger.h  LoggerModes.h
engine/common/generators/: SerializationMacros.h  VertexMacros.h
engine/common/translations/: Language.h  Text.cpp  Text.h
engine/configuration/: ConfigData.h  ConfigMacros.h
engine/ecs/systems/: BaseSystem.cpp  BaseSystem.h  RenderSystem.cpp  RenderSystem.h
engine/math/: PaddingCalculator.h
engine/renderer/allocator/: VulkanMemory.cpp  VulkanMemory.h  VulkanMemoryAllocatorImplementation.cpp  VulkanMemoryAllocatorImplementation.h
engine/renderer/core/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanPushConstantRanges.cpp  VulkanPushConstantRanges.h  VulkanQueue.cpp  VulkanQueue.h  VulkanQueues.cpp  VulkanQueues.h  VulkanRasterizationPipeline.cpp  VulkanRasterizationPipeline.h  VulkanRayTracingPipeline.cpp  VulkanRayTracingPipeline.h  (+12 more)
engine/renderer/helpers/: BufferMemoryBarrierBuilder.cpp  BufferMemoryBarrierBuilder.h  DebugExtender.cpp  DebugExtender.h  DebuggerCallback.cpp  DebuggerCallback.h  DeviceRequiredFeatures.cpp  DeviceRequiredFeatures.h  ImageMemoryBarrierBuilder.cpp  ImageMemoryBarrierBuilder.h  MemoryBarrierBuilder.cpp  MemoryBarrierBuilder.h  RasterizationPipelineBuilder.cpp  RasterizationPipelineBuilder.h  VertexBindingDescriptorGenerator.h  VulkanSubpass.h  VulkanVersion.cpp  VulkanVersion.h
engine/renderer/vertex/: FatVertex.h
engine/window/: Window.cpp  Window.h
scripts/js/: compile_shaders.js  format_json_files.js  generate_ascii_text.js  generate_config_parser.js  generate_serializers.js  generate_vertex_attribute_descriptors.js  package-lock.json  package.json  redistribute_engine.js
scripts/js/templates/: ConfigGeneratorTemplate.h  VertexAttributeDescriptorsTemplate.h
scripts/js/user_modules/: exec_helper.js  files_helper.js  generators_helper.js  standarization.js
shaders/: example_fs.frag  example_vs.vert
